// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="sc-htpNat QOKog"
>
  
  <input
    className="sc-bxivhb cDkyWh"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    type="text"
  />
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="sc-htpNat QOKog"
>
  <label
    className="sc-bwzfXH eQhPVJ"
    htmlFor="input-with-label"
  >
     
    Text label
     
  </label>
  <input
    className="sc-bxivhb cDkyWh"
    defaultValue="foo"
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    type="text"
  />
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="sc-htpNat QOKog"
>
  
  <input
    className="sc-bxivhb ezFnNS"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    type="text"
  />
  <div
    className="sc-bdVaJa fIlZBq"
  >
    Error message
  </div>
</div>
`;
